[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # mccabe
    "C",
    # isrot
    "I",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # Pylint 
    # "PL",
]
ignore = [
    "E203",
    "D211",  # Conflict D203
    "D212",  # Conflict D213
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
    
